@@ -59,6 +59,7 @@ CHANGELOG Roundcube Webmail
 - Fix contacts list update after adding/deleting/moving a contact (#1490028, #1490033)
 - Fix handling of email addresses with quoted domain part (#1490040)
 - Fix comm_path update on task switch (#1490041)
+- Fix error in MSSQL update script 2013061000.sql (#1490061)
 
 RELEASE 1.0.2
 -------------
